--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
                 </div>
             </div>
         </div>
-        <div class="home-banner">        
+        <div class="home-banner">    
+                <h1>用一餐麵包</h1>
+                <h2>享受片刻美好時光</h2>
         </div>
         <div class="homehead-bg"></div>
         <div class="wrap-home">
             <div class="concept">
-                    <div class="concept-pic">
-                        <img src="images/home/home-comcept.png">
-                        <div class="title">
-                            <h2>用一餐麵包，享受片刻美好時光</h2>
-                        </div>
-                    </div>
+                <div class="concept-pic">
+                    <img class="left" src="images/home/home-concept-1.png">
+                    <img class="right" src="images/home/home-concept-2.png">
+                </div>
                 <div class="concept-text">
                     <p>日光小麥所的初衷是致力於作做出美味、適合放在餐桌上，與親朋好友或家人一同品味的麵包。<br>
-                    除了常見的吐司和貝果，也將各種新鮮食材融入麵包中，期望帶給大家健康且獨特的風味。</p>
+                    除了常見的吐司和貝果，也將各種新鮮食材融入麵包中，期望帶給大家健康且獨特的風味。</p>                       
                 </div>
             </div>
-            <div class="pick-up">
+            <div class="pick-up illus">
                 <h2>Pick-Up</h2>
                 <div class="item">
                     <div class="pickup-pic">
@@ -64,12 +64,10 @@
                 <div class="item">
                     <div class="pickup-pic">
                         <img src="images/home/home-pickup-2.png">
-                        <div class="bread-pic-2"><img src="images/bread-illus/bread-4.png" alt=""></div>
                     </div>
                     <div class="pickup-text left">
                         <h5>藍莓貝果</h5>
                         <p>將新鮮多汁的藍莓融入麵糰，為您帶來藍莓的酸甜風味，與貝果獨特的口感完美結合。</p>
-                        <div class="bread-pic-3"><img src="images/bread-illus/bread-2.png" alt=""></div>
                     </div>
                 </div>
                 <div class="item">
@@ -82,8 +80,6 @@
                     </div>
                 </div>
                 <a href="products.html" class="more-btn">More</a>
-                <div class="bread-pic-4"><img src="images/bread-illus/bread-3.png" alt=""></div>
-                <div class="bread-pic-1"><img src="images/bread-illus/bread-1.png" alt=""></div>
             </div>
             <div class="news">
                 <h2>最新消息</h2>
