--- a/products-detail.html
+++ b/products-detail.html
@@ -75,13 +75,13 @@
                         <div class="title">
                             <h2>純鮮奶吐司</h2>
                         </div>
-                        <p>純鮮奶吐司片，以新鮮牛奶融入吐司之中，擁有柔軟的質地，並散發著濃郁的鮮奶香氣。</p>
-                        <div class="price-tag">
-                            <div class="price"><span>$50</span></div>
-                            <div class="tag"><span>鮮奶</span></div>
+                        <div class="tag">
+                            <span>鮮奶</span>
                         </div>
-                        <div class="btn-list">
-                            <div class="amount btn">
+                        <p>純鮮奶吐司片，以新鮮牛奶融入吐司之中，擁有柔軟的質地，並散發著濃郁的鮮奶香氣。</p>
+                        <div class="price-amount">
+                            <div class="price"><span>$50</span></div>
+                            <div class="amount">
                                 <span class="minus"><i class="fa-solid fa-minus" style="color: #60222b;"></i>
                                 </span>
                                 <input type="number" value="1" min="1" class="buy-number" >
@@ -89,7 +89,9 @@
                                     <i class="fa-solid fa-plus" style="color: #60222b;"></i>
                                 </span>
                             </div>
-                            <div class="btn"><button class="shop ">加入購物車</button></div>
+                        </div>
+                        <div class="btn">
+                            <button >加入購物車</button>
                         </div>
                     </div>
                 </div>
@@ -106,9 +108,9 @@
                                 <p>以下是一些建議的保存方法：   </p>
                                 <ul>
                                     <li> 密封保存： 將純鮮奶吐司放入密封袋或保鮮盒中，以減少空氣流通，防止麵包變乾。確保密封器處於密封狀態，防止空氣進入。</li>
-                                    <li>. 避免光照： 將吐司放在陰涼處，遠離陽光直射。陽光可能會使麵包表面變硬，同時影響內部的口感。</li>
-                                    <li> 避免冷凍： 儘量避免將純鮮奶吐司冷凍，因為冷凍可能會影響麵包的質地和口感。如果計劃長時間保存，可以將吐司分切成小片，單層放在冷凍袋中，以便分次取用。</li>
-                                    <li> 分開保存： 如果有多片吐司，可以考慮將它們分開保存，以防止它們相互黏附，影響口感。</li>
+                                    <li>避免光照： 將吐司放在陰涼處，遠離陽光直射。陽光可能會使麵包表面變硬，同時影響內部的口感。</li>
+                                    <li>避免冷凍： 儘量避免將純鮮奶吐司冷凍，因為冷凍可能會影響麵包的質地和口感。如果計劃長時間保存，可以將吐司分切成小片，單層放在冷凍袋中，以便分次取用。</li>
+                                    <li>分開保存： 如果有多片吐司，可以考慮將它們分開保存，以防止它們相互黏附，影響口感。</li>
                                 </ul>
                                 <p>總的來說，密封、避光、遠離極端溫度是保存純鮮奶吐司的基本原則。按照這些建議，可以確保吐司在保存期間保持最佳的風味和質地。</p>
                             </div>
