--- a/about.html
+++ b/about.html
@@ -9,14 +9,10 @@
     <link rel="stylesheet" href="CSS/component-set.css">
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
     <title>關於我們 | 日光小麥所</title>
-</head> <link rel="stylesheet" href="CSS/nav-footer.css">
-    <link rel="stylesheet" href="CSS/normalize.css">
-    <link rel="stylesheet" href="CSS/home-style.css">
-    <link rel="stylesheet" href="CSS/component-set.css">
-    <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
+</head> 
 <body>
     <div class="container">
-        <div class="nav">
+        <header>
             <div class="logo">
                 <a href="index.html"><img src="images/logo/logo-white.svg"></a>
             </div>
@@ -37,15 +33,31 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </header>
+        <nav>
+            <div class="logo">
+                <a href="index.html"><img src="https://picsum.photos/72/72/?random=10"></a>
+            </div>
+            <div class="nav-icons">
+                <ul>
+                    <li><a href="#">
+                        <i class="fa-solid fa-cart-shopping" style="color: #401202;"></i>
+                    </a></li>
+                    <li><a href="#">
+                        <i class="fa-solid fa-user" style="color: #401202;"></i>
+                    </a></li>
+                    <li class="menu"><a href="#">
+                        <i class="fa-solid fa-bars" style="color: #401202;"></i>
+                    </a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="banner">                  
         </div>
         <div class="head-bg">
             <h1>關於我們</h1>
         </div>
-        <div class="wrap">
-            <div class="bread-pic-1"><img src="images/bread-illus/bread-3.png" alt=""></div>
-            <div class="bread-pic-2"><img src="images/bread-illus/bread-1.png" alt=""></div>
+        <div class="wrap illus">
             <div class="wrap-item">
                 <div class="bread-crumbs">
                     <ul>
@@ -53,8 +65,7 @@
                         <li><a >關於我們</a></li>
                     </ul>
                 </div>
-                <div class="item">
-                    
+                <div class="item">   
                     <div class="first-pic">
                         <img class="left-top" src="images/about/about-1.png">
                         <img class="right-bottom" src="images/about/about-2.png">
@@ -66,8 +77,6 @@
                         從最基本的貝果和吐司開始，Amy漸漸地踏上了歐式麵包的烘焙之旅，製作了越來越多種類的麵包。在朋友和親人的鼓勵下，開始在網路上販賣麵包。
                         </p>
                     </div>
-                    <div class="bread-pic-3"><img src="images/bread-illus/bread-2.png" alt=""></div>
-                    <div class="bread-pic-4"><img src="images/bread-illus/bread-4.png" alt=""></div>
                 </div>
                 <div class="item">
                     <div class="pic">
@@ -89,11 +98,11 @@
                 </div>
             </div>
         </div>
-        <div class="footer">
+        <footer>
             <div class="footer-area">
-                <div class="foot-logo right-side">
+                <a href="#" class="foot-logo">
                     <img src="images/logo/logo-1113 2.svg">
-                </div>
+                </a>
                 <div class="foot-select">
                     <ul>
                         <li><a href="about.html">關於我們</a></li>
@@ -104,8 +113,21 @@
                     </ul>
                 </div>
             </div>
+            <div class="mobile-footer">
+                <a href="#" class="foot-logo">
+                    <img src="https://picsum.photos/64/64/?random=10">
+                </a>
+                <div class="social-media">
+                    <a href="#" class="fb">
+                        <i class="fa-brands fa-facebook" ></i>
+                    </a>
+                    <a href="#" class="ig">
+                        <i class="fa-brands fa-instagram" ></i>
+                    </a>
+                </div>
+            </div>           
             <div class="copyright"><p>本網站為緯育TibaMe前端工程師班第88期學員專題作品平台僅供學習、展示之用。</p></div>
-        </div>
+        </footer>
         <a href="#" id="top" class="to-top close">
             <i class="fa-solid fa-circle-chevron-up" style="color: #60222b;"></i>
         </a>
