--- a/news.html
+++ b/news.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="nav">
+        <header>
             <div class="logo">
                 <a href="index.html"><img src="images/logo/logo-white.svg"></a>
             </div>
@@ -34,24 +34,39 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </header>
+        <nav>
+            <div class="logo">
+                <a href="index.html"><img src="https://picsum.photos/72/72/?random=10"></a>
+            </div>
+            <div class="nav-icons">
+                <ul>
+                    <li><a href="#">
+                        <i class="fa-solid fa-cart-shopping" style="color: #401202;"></i>
+                    </a></li>
+                    <li><a href="#">
+                        <i class="fa-solid fa-user" style="color: #401202;"></i>
+                    </a></li>
+                    <li class="menu"><a href="#">
+                        <i class="fa-solid fa-bars" style="color: #401202;"></i>
+                    </a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="banner">                  
         </div>
         <div class="head-bg">
             <h1>最新消息</h1>
         </div>
         <div class="wrap">
-            <div class="wrap-item">
+            <div class="wrap-item illus">
                 <div class="bread-crumbs">
                     <ul>
                         <li><a href="index.html">首頁</a></li>
                         <li><a>最新消息</a></li>
                     </ul>
                 </div>
-                <div class="bread-pic-1"><img src="images/bread-illus/bread-4.png" alt=""></div>
                 <div class="top-news">
-                    <div class="bread-pic-2"><img src="images/bread-illus/bread-5.png" alt=""></div>
-                    
                     <div class="news-info">
                         <h3 class="title">秋季新品 栗子蒙布朗吐司</h3>
                         <div class="tag">
@@ -68,7 +83,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <a href="#" class="col-md-4">
+                    <a href="#" class="col-md-6 col-lg-4 col-sm-6 col-12">
                         <div class="card">
                             <div class="pic">
                                 <img src="images/news/news-1.png">
@@ -83,7 +98,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="col-md-4">
+                    <a href="#" class="col-md-6 col-lg-4 col-sm-6  col-12">
                         <div class="card">
                             <div class="pic samepic">
                                 <img src="images/news/news-2.png">
@@ -99,7 +114,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="col-md-4">
+                    <a href="#" class="col-md-6 col-lg-4 col-sm-6 col-12">
                         <div class="card">
                             <div class="pic">
                                 <img src="images/news/news-3.png">
@@ -114,7 +129,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="col-md-4">
+                    <a href="#" class="col-md-6 col-lg-4 col-sm-6 col-12">
                         <div class="card">
                             <div class="pic samepic">
                                 <img src="images/news/news-2.png">
@@ -130,7 +145,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="col-md-4">
+                    <a href="#" class="col-md-6 col-lg-4 col-sm-6 col-12">
                         <div class="card">
                             <div class="pic">
                                 <img src="images/news/news-4.png">
@@ -145,7 +160,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="col-md-4">
+                    <a href="#" class="col-md-6 col-lg-4 col-sm-6 col-12">
                         <div class="card">
                             <div class="pic samepic">
                                 <img src="images/news/news-2.png">
@@ -163,17 +178,15 @@
                     </a>
                 </div>
                 <div class="pages">
-                    <div class="bread-pic-3"><img src="images/bread-illus/bread-1.png" alt=""></div>
                     <a class="current">1</a>
                     <a href="#">2</a>
                     <a href="#">3</a>
                     <a href="#">4</a>
                     <a href="#">5</a>
-                    <div class="bread-pic-4"><img src="images/bread-illus/bread-3.png" alt=""></div>
                 </div>
             </div>
         </div>            
-        <div class="footer">
+        <footer>
             <div class="footer-area">
                 <a href="#" class="foot-logo">
                     <img src="images/logo/logo-1113 2.svg">
@@ -188,8 +201,21 @@
                     </ul>
                 </div>
             </div>
+            <div class="mobile-footer">
+                <a href="#" class="foot-logo">
+                    <img src="https://picsum.photos/64/64/?random=10">
+                </a>
+                <div class="social-media">
+                    <a href="#" class="fb">
+                        <i class="fa-brands fa-facebook" ></i>
+                    </a>
+                    <a href="#" class="ig">
+                        <i class="fa-brands fa-instagram" ></i>
+                    </a>
+                </div>
+            </div>           
             <div class="copyright"><p>本網站為緯育TibaMe前端工程師班第88期學員專題作品平台僅供學習、展示之用。</p></div>
-        </div>
+        </footer>
         <a href="#" id="top" class="to-top close">
             <i class="fa-solid fa-circle-chevron-up" style="color: #60222b;"></i>
         </a>
