--- a/news-detail.html
+++ b/news-detail.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="nav">
+        <header>
             <div class="logo">
                 <a href="index.html"><img src="images/logo/logo-white.svg"></a>
             </div>
@@ -33,7 +33,25 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </header>
+        <nav>
+            <div class="logo">
+                <a href="index.html"><img src="https://picsum.photos/72/72/?random=10"></a>
+            </div>
+            <div class="nav-icons">
+                <ul>
+                    <li><a href="#">
+                        <i class="fa-solid fa-cart-shopping" style="color: #401202;"></i>
+                    </a></li>
+                    <li><a href="#">
+                        <i class="fa-solid fa-user" style="color: #401202;"></i>
+                    </a></li>
+                    <li class="menu"><a href="#">
+                        <i class="fa-solid fa-bars" style="color: #401202;"></i>
+                    </a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="banner">                  
         </div>
         <div class="head-bg">
@@ -85,7 +103,7 @@
                 </div>
             </div>
         </div>       
-        <div class="footer">
+        <footer>
             <div class="footer-area">
                 <a href="#" class="foot-logo">
                     <img src="images/logo/logo-1113 2.svg">
@@ -100,8 +118,21 @@
                     </ul>
                 </div>
             </div>
+            <div class="mobile-footer">
+                <a href="#" class="foot-logo">
+                    <img src="https://picsum.photos/64/64/?random=10">
+                </a>
+                <div class="social-media">
+                    <a href="#" class="fb">
+                        <i class="fa-brands fa-facebook" ></i>
+                    </a>
+                    <a href="#" class="ig">
+                        <i class="fa-brands fa-instagram" ></i>
+                    </a>
+                </div>
+            </div>           
             <div class="copyright"><p>本網站為緯育TibaMe前端工程師班第88期學員專題作品平台僅供學習、展示之用。</p></div>
-        </div>
+        </footer>
         <a href="#" id="top" class="to-top close">
             <i class="fa-solid fa-circle-chevron-up" style="color: #60222b;"></i>
         </a>
