--- a/news-detail.html
+++ b/news-detail.html
@@ -52,14 +52,30 @@
                 </ul>
             </div>
         </nav>
+        <nav>
+            <div class="logo">
+                <a href="index.html"><img src="https://picsum.photos/72/72/?random=10"></a>
+            </div>
+            <div class="nav-icons">
+                <ul>
+                    <li><a href="#">
+                        <i class="fa-solid fa-cart-shopping" style="color: #401202;"></i>
+                    </a></li>
+                    <li><a href="#">
+                        <i class="fa-solid fa-user" style="color: #401202;"></i>
+                    </a></li>
+                    <li class="menu"><a href="#">
+                        <i class="fa-solid fa-bars" style="color: #401202;"></i>
+                    </a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="banner">                  
         </div>
         <div class="head-bg">
             <h1>最新消息</h1>
         </div>
-        <div class="wrap">
-            <div class="bread-pic-1"><img src="images/bread-illus/bread-6.png" alt=""></div>
-            <div class="bread-pic-2"><img src="images/bread-illus/bread-1.png" alt=""></div>
+        <div class="wrap illus">
             <div class="wrap-item">
                 <div class="bread-crumbs">
                     <ul>
@@ -79,10 +95,8 @@
                     </div>
                     <div class="pic">
                         <img src="images/new-detail/new-detail-lg.png">
-                        <div class="bread-pic-3"><img src="images/bread-illus/bread-3.png" alt=""></div>
                     </div>
                     <div class="text">
-                        <div class="bread-pic-4"><img src="images/bread-illus/bread-4.png" alt=""></div>
                         <p>在這金黃的秋季，我們帶給您一場味蕾的盛宴，誠摯邀請您品嚐我們的新品——栗子蒙布朗吐司。
                             這款吐司融合了新鮮栗子的香濃滋味和吐司的綿密口感，打破了傳統吐司的框架，帶給您前所未有的美味體驗。
                             </p>
