--- a/news.html
+++ b/news.html
@@ -75,14 +75,31 @@
                         </div>
                         <div class="text">
                             <p>在這金黃的秋季，我們帶給您一場味蕾的盛宴，誠摯邀請您品嚐我們的新品——栗子蒙布朗吐司。</p>
-                            <p>這款吐司融合了新鮮栗子的香濃滋味和吐司的綿密口感，打破了傳統吐司的框架，帶給您前所未有的美味體驗</p></div>
-                        <a href="news-detail.html" class="more-btn">More</a>
+                            <p>這款吐司融合了新鮮栗子的香濃滋味和吐司的綿密口感，打破了傳統吐司的框架，帶給您前所未有的美味體驗</p>
+                        </div>
+                        <div class="more-btn"><a href="news-detail.html">More</a></div>
                     </div>
                     <div class="pic">
-                        <img src="images/news/news-lg-pic.png">
+                        <img class="lg" src="images/news/news-lg-pic.png">
+                        <img class="md" src="images/news/news-md-pic.png">
                     </div>
                 </div>
                 <div class="row">
+                    <a href="#" class="col-md-6 col-lg-4 col-sm-6 col-12">
+                        <div class="card">
+                            <div class="pic">
+                                <img src="images/news/mobile-top-news.png">
+                            </div>
+                            <div class="news-info">
+                                <h5 class="title">秋季新品 栗子蒙布朗吐司</h5>
+                                <p class="text">在這金黃的秋季，我們帶給您一場味蕾的盛宴，誠摯邀請您品嚐我們的新品——栗子蒙布朗吐司。</p>
+                                <div class="tag">
+                                    <span class="new">New</span>
+                                    <div class="time">2023.11.09</div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
                     <a href="#" class="col-md-6 col-lg-4 col-sm-6 col-12">
                         <div class="card">
                             <div class="pic">
